--- a/Common/FreeParkingSystem.Common.csproj
+++ b/Common/FreeParkingSystem.Common.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="System.ComponentModel" Version="4.3.0" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.4.0" />
     <PackageReference Include="System.ValueTuple" Version="4.4.0" />
+    <PackageReference Include="X.PagedList" Version="7.1.0" />
   </ItemGroup>
 
 </Project>
