--- a/FreeParkingSystem.API/FreeParkingSystem.API.csproj
+++ b/FreeParkingSystem.API/FreeParkingSystem.API.csproj
@@ -10,10 +10,15 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="NETStandard.Library" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Common\FreeParkingSystem.Common.csproj" />
   </ItemGroup>
 
 </Project>
