--- a/FreeParkingSystem.Common.Tests/FreeParkingSystem.Common.Tests.csproj
+++ b/FreeParkingSystem.Common.Tests/FreeParkingSystem.Common.Tests.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\Common\FreeParkingSystem.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
+
 </Project>
