--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,8 +1,12 @@
 version: '3'
 
 services:
-  freeparkingsystem.api:
+  freeparkingsystem.webapp:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
     ports:
       - "80"
+networks:
+  default:
+    external:
+      name: nat
