--- a/Tests/FreeParkingSystem.Common.Tests/FreeParkingSystem.Common.Tests.csproj
+++ b/Tests/FreeParkingSystem.Common.Tests/FreeParkingSystem.Common.Tests.csproj
@@ -15,11 +15,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Common\FreeParkingSystem.Common.csproj" />
+    <Folder Include="Properties\" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Properties\" />
+    <ProjectReference Include="..\..\Core\FreeParkingSystem.Common\FreeParkingSystem.Common.csproj" />
   </ItemGroup>
 
 </Project>
