--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -6,7 +6,13 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
     ports:
       - "80"
+  freeparkingsystem.accounts:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+    ports:
+      - "80"
 networks:
   default:
     external:
       name: nat
+
