--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -11,8 +11,15 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
     ports:
       - "80"
+  freeparkingsystem.parking:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+    ports:
+      - "80"
+
 networks:
   default:
     external:
       name: nat
+
 
