--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     ports:
         - "3306:1433"
     volumes:
-        - C:/Repos/data
+        - E:/Repos/data:C:/Repos/data
     environment:
         SA_PASSWORD: "S1mple@password"
         ACCEPT_EULA: "Y"
         COMPOSE_CONVERT_WINDOWS_PATHS: 1
-        #   attach_dbs:
+        attach_dbs: '[ { "dbName": "FreeParkingSystem.Database", "dbFiles": [ "C:\\Repos\\data\\FreeParkingSystem.Database_Primary.mdf", "C:\\Repos\\data\\FreeParkingSystem.Database_Primary.ldf" ] } ]'
