--- a/src/Account/FreeParkingSystem.Accounts.Contract/FreeParkingSystem.Accounts.Contract.csproj
+++ b/src/Account/FreeParkingSystem.Accounts.Contract/FreeParkingSystem.Accounts.Contract.csproj
@@ -4,4 +4,19 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Update="Resources\Validations.Designer.cs">
+      <DependentUpon>Validations.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Resources\Validations.resx">
+      <LastGenOutput>Validations.Designer.cs</LastGenOutput>
+      <Generator>PublicResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
