--- a/Tests/FreeParkingSystem.Accounts.Tests/FreeParkingSystem.Accounts.Tests.csproj
+++ b/Tests/FreeParkingSystem.Accounts.Tests/FreeParkingSystem.Accounts.Tests.csproj
@@ -10,6 +10,8 @@
 		<PackageReference Include="AutoFixture" Version="4.11.0" />
 		<PackageReference Include="AutoFixture.AutoMoq" Version="4.11.0" />
 		<PackageReference Include="AutoFixture.Xunit" Version="4.11.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.6" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.2.6" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
 		<PackageReference Include="Shouldly" Version="3.0.2" />
 		<PackageReference Include="xunit" Version="2.4.1" />
