Start working with Accounts.Api etc

--- a/src/Account/FreeParkingSystem.Accounts.API/appsettings.json
+++ b/src/Account/FreeParkingSystem.Accounts.API/appsettings.json
@@ -1,8 +1,52 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+	"Logging": {
+		"LogLevel": {
+			"Default": "Trace"
+		}
+	},
+	"AllowedHosts": "*",
+	"ConnectionStrings": {
+		"AccountsDbContext": "Server=localhost,3306;Database=FreeParkingSystem.Database;user id=sa;password=S1mple@password"
+	},
+	"EncryptionOptions": {
+		"SecretKey": [
+			237,
+			201,
+			222,
+			52,
+			18,
+			152,
+			49,
+			135,
+			198,
+			143,
+			48,
+			247,
+			22,
+			185,
+			5,
+			216,
+			43,
+			6,
+			37,
+			243,
+			13,
+			52,
+			149,
+			119,
+			74,
+			104,
+			70,
+			130,
+			246,
+			76,
+			231,
+			147
+		]
+	},
+	"PasswordOptions": {
+		"MinimumCharacters": 2,
+		"MaximumCharacters": 16,
+		"Requirements": "Numbers, Capitals"
+	} 
 }
