Working with API authentication

--- a/src/Account/FreeParkingSystem.Accounts.API/appsettings.json
+++ b/src/Account/FreeParkingSystem.Accounts.API/appsettings.json
@@ -48,5 +48,44 @@
 		"MinimumCharacters": 2,
 		"MaximumCharacters": 16,
 		"Requirements": "Numbers, Capitals"
+	},
+	"jwt": {
+		"ExpiresAfter": "02:00:00",
+		"ValidAudience": "https://localhost", 
+		"ValidIssuer": "https://localhost" ,
+		"Secret": [
+			136,
+			38,
+			156,
+			175,
+			160,
+			81,
+			194,
+			150,
+			227,
+			195,
+			234,
+			132,
+			218,
+			208,
+			150,
+			19,
+			26,
+			78,
+			103,
+			172,
+			41,
+			174,
+			253,
+			245,
+			175,
+			135,
+			197,
+			48,
+			23,
+			169,
+			234,
+			162
+		]
 	} 
 }
