--- a/src/Account/FreeParkingSystem.Accounts.API/FreeParkingSystem.Accounts.API.csproj
+++ b/src/Account/FreeParkingSystem.Accounts.API/FreeParkingSystem.Accounts.API.csproj
@@ -1,29 +1,30 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
-    <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
-    <UserSecretsId>196302ab-7fbc-40a6-bcc4-ecabae9c20d3</UserSecretsId>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+	<TargetFramework>netcoreapp2.2</TargetFramework>
+	<AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+	<UserSecretsId>196302ab-7fbc-40a6-bcc4-ecabae9c20d3</UserSecretsId>
+	<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+	  <LangVersion>7.3</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.4.0" />
-    <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.2.4" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0" />
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.7.9" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.5.0" />
+	<PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.4.0" />
+	<PackageReference Include="Microsoft.AspNetCore.App" />
+	<PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+	<PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0" />
+	<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.2.4" />
+	<PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0" />
+	<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.7.9" />
+	<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
+	<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.5.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Common\FreeParkingSystem.Common.API\FreeParkingSystem.Common.API.csproj" />
-    <ProjectReference Include="..\..\Common\FreeParkingSystem.Common\FreeParkingSystem.Common.csproj" />
-    <ProjectReference Include="..\FreeParkingSystem.Accounts.Contract\FreeParkingSystem.Accounts.Contract.csproj" />
-    <ProjectReference Include="..\FreeParkingSystem.Accounts\FreeParkingSystem.Accounts.csproj" />
+	<ProjectReference Include="..\..\Common\FreeParkingSystem.Common.API\FreeParkingSystem.Common.API.csproj" />
+	<ProjectReference Include="..\..\Common\FreeParkingSystem.Common\FreeParkingSystem.Common.csproj" />
+	<ProjectReference Include="..\FreeParkingSystem.Accounts.Contract\FreeParkingSystem.Accounts.Contract.csproj" />
+	<ProjectReference Include="..\FreeParkingSystem.Accounts\FreeParkingSystem.Accounts.csproj" />
   </ItemGroup>
 
 </Project>
