--- a/src/Account/FreeParkingSystem.Accounts.Contract/FreeParkingSystem.Accounts.Contract.csproj
+++ b/src/Account/FreeParkingSystem.Accounts.Contract/FreeParkingSystem.Accounts.Contract.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
