working with docker files

--- a/src/Account/FreeParkingSystem.Accounts.API/Dockerfile
+++ b/src/Account/FreeParkingSystem.Accounts.API/Dockerfile
@@ -4,17 +4,29 @@ EXPOSE 80
 EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/core/sdk:2.2-stretch AS build
-WORKDIR /src
-COPY ["src/Account/FreeParkingSystem.Accounts/FreeParkingSystem.Accounts.csproj", "src/Account/FreeParkingSystem.Accounts/"]
-RUN dotnet restore "src/Account/FreeParkingSystem.Accounts/FreeParkingSystem.Accounts.csproj"
+# Install system components
+RUN apt-get update -y && apt-get install -y  curl gnupg apt-transport-https && curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - && sh -c 'echo "deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-debian-stretch-prod stretch main" > /etc/apt/sources.list.d/microsoft.list' && apt-get update -y && apt-get install -y powershell
+
+# Start PowerShell
+SHELL ["pwsh", "-Command"]
+
+WORKDIR /source
+
 COPY . .
-WORKDIR "/src/src/Account/FreeParkingSystem.Accounts"
-RUN dotnet build "FreeParkingSystem.Accounts.csproj" -c Release -o /app
+RUN dotnet restore "src/Account/FreeParkingSystem.Accounts.API/FreeParkingSystem.Accounts.API.csproj"
+
+WORKDIR "/source/src/Account/FreeParkingSystem.Accounts.API"
+
+RUN dotnet build "FreeParkingSystem.Accounts.API.csproj" -c Release -o /app
 
 FROM build AS publish
-RUN dotnet publish "FreeParkingSystem.Accounts.csproj" -c Release -o /app
+RUN dotnet publish "FreeParkingSystem.Accounts.API.csproj" -c Release -o /app 
 
-FROM base AS final
-WORKDIR /app
-COPY --from=publish /app .
-ENTRYPOINT ["dotnet", "FreeParkingSystem.Accounts.dll"]
+WORKDIR "/source"
+RUN $env:Deployment_Environment_Name+='Staging'
+RUN & .\tools\SetupEnvironmentVariables.ps1 "/app/appsettings.{environment_name}.json"
+#
+#FROM base AS final
+#WORKDIR /app
+#COPY --from=publish /app .
+#ENTRYPOINT ["dotnet", "FreeParkingSystem.Accounts.API.dll"]
