Working with docker build

--- a/src/Account/FreeParkingSystem.Accounts.API/Dockerfile
+++ b/src/Account/FreeParkingSystem.Accounts.API/Dockerfile
@@ -2,17 +2,26 @@ FROM mcr.microsoft.com/dotnet/core/aspnet:2.2-stretch-slim AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
-
-FROM mcr.microsoft.com/dotnet/core/sdk:2.2-stretch AS build
 # Install system components
 RUN apt-get update -y && apt-get install -y  curl gnupg apt-transport-https && curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - && sh -c 'echo "deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-debian-stretch-prod stretch main" > /etc/apt/sources.list.d/microsoft.list' && apt-get update -y && apt-get install -y powershell
 
 # Start PowerShell
 SHELL ["pwsh", "-Command"]
 
+
+FROM mcr.microsoft.com/dotnet/core/sdk:2.2-stretch AS startup
+# Install system components
+RUN apt-get update -y && apt-get install -y  curl gnupg apt-transport-https && curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - && sh -c 'echo "deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-debian-stretch-prod stretch main" > /etc/apt/sources.list.d/microsoft.list' && apt-get update -y && apt-get install -y powershell
+
+# Start PowerShell
+SHELL ["pwsh", "-Command"]
+
+FROM startup AS build
+
 WORKDIR /source
 
 COPY . .
+
 RUN dotnet restore "src/Account/FreeParkingSystem.Accounts.API/FreeParkingSystem.Accounts.API.csproj"
 
 WORKDIR "/source/src/Account/FreeParkingSystem.Accounts.API"
@@ -20,25 +29,15 @@ WORKDIR "/source/src/Account/FreeParkingSystem.Accounts.API"
 RUN dotnet build "FreeParkingSystem.Accounts.API.csproj" -c Release -o /app
 
 FROM build AS publish
-RUN dotnet publish "FreeParkingSystem.Accounts.API.csproj" -c Release -o /app 
-
-WORKDIR "/source"
-# Default environment variables.
-
-ENV Deployment_Environment_Name='Staging' \
-Deployment_LogLevel_Default='Error' \
-Deployment_Db_Server='localhost,3306' \
-Deployment_Db_Name='FreeParkingSystem.Database' \
-Deployment_Db_User='sa' \
-Deployment_Db_Password='S1mple@password' \
-Deployment_PasswordOptions_MinimumCharacters='4'
-RUN & .\tools\SetupEnvironmentVariables.ps1 "/app/appsettings.{environment_name}.json" 
+RUN dotnet publish "FreeParkingSystem.Accounts.API.csproj" -c Release -o /app
 
 WORKDIR "/"
-
-RUN Remove-Item .\source -Recurse -Force
+ADD tools app/tools
+ADD src/Account/FreeParkingSystem.Accounts.API/Properties/Run.ps1 /app/Run.ps1
+RUN Remove-Item .\source -Recurse -Force; New-Item -Path .\root\.microsoft\usersecrets -ItemType "directory";New-Item -Path .\root\.aspnet\https\ -ItemType "directory"
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app .
-ENTRYPOINT ["dotnet", "FreeParkingSystem.Accounts.API.dll", "ASPNETCORE_ENVIRONMENT $env:Deployment_Environment_Name"]
+
+ENTRYPOINT .\Run.ps1
