--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,25 @@ services:
         ACCEPT_EULA: "Y"
         COMPOSE_CONVERT_WINDOWS_PATHS: 1
         attach_dbs: '[ { "dbName": "FreeParkingSystem.Database", "dbFiles": [ "C:\\Repos\\data\\FreeParkingSystem.Database_Primary.mdf", "C:\\Repos\\data\\FreeParkingSystem.Database_Primary.ldf" ] } ]'
+  accounts:
+    depends_on: ["db"]
+    build: 
+        context: .
+        dockerfile: .\src\Account\FreeParkingSystem.Accounts.API\dockerfile
+    ports: 
+        - "1000:80"
+        - "1001:443"
+    volumes: 
+        - ${HOME}/.aspnet/https/:/root/.aspnet/https/
+    environment: 
+        - Deployment_Environment_Name=Staging 
+        - Deployment_LogLevel_Default=Error
+        - Deployment_Db_Server=localhost,3306
+        - Deployment_Db_Name=FreeParkingSystem.Database 
+        - Deployment_Db_User=sa 
+        - Deployment_Db_Password=S1mple@password 
+        - Deployment_PasswordOptions_MinimumCharacters=4
+        - ASPNETCORE_ENVIRONMENT=Staging
+        - ASPNETCORE_URLS="https://+:443;http://+:80"
+        - ASPNETCORE_HTTPS_PORT=1001
+        - ASPNETCORE_HTTP_PORT=1000
