--- a/src/Account/FreeParkingSystem.Accounts.API/FreeParkingSystem.Accounts.API.csproj
+++ b/src/Account/FreeParkingSystem.Accounts.API/FreeParkingSystem.Accounts.API.csproj
@@ -27,4 +27,10 @@
 	<ProjectReference Include="..\FreeParkingSystem.Accounts\FreeParkingSystem.Accounts.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Properties\Run.ps1">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
