--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
 version: '3'
 services:
-  db:
+  main.database:
     image: "microsoft/mssql-server-windows-developer"
-    container_name: db1
     ports:
         - "3306:1433"
     volumes:
@@ -13,7 +12,9 @@ services:
         COMPOSE_CONVERT_WINDOWS_PATHS: 1
         attach_dbs: '[ { "dbName": "FreeParkingSystem.Database", "dbFiles": [ "C:\\Repos\\data\\FreeParkingSystem.Database_Primary.mdf", "C:\\Repos\\data\\FreeParkingSystem.Database_Primary.ldf" ] } ]'
   accounts:
-    depends_on: ["db"]
+    depends_on:
+        - main.database
+    image: free-parking-system-accounts
     build: 
         context: .
         dockerfile: .\src\Account\FreeParkingSystem.Accounts.API\dockerfile
@@ -21,16 +22,18 @@ services:
         - "1000:80"
         - "1001:443"
     volumes: 
-        - ${HOME}/.aspnet/https/:/root/.aspnet/https/
+        - ${HOME}/.aspnet/https/:/https/
     environment: 
         - Deployment_Environment_Name=Staging 
-        - Deployment_LogLevel_Default=Error
-        - Deployment_Db_Server=localhost,3306
+        - Deployment_LogLevel_Default=Information
+        - Deployment_Db_Server=main.database,1433
         - Deployment_Db_Name=FreeParkingSystem.Database 
         - Deployment_Db_User=sa 
         - Deployment_Db_Password=S1mple@password 
         - Deployment_PasswordOptions_MinimumCharacters=4
         - ASPNETCORE_ENVIRONMENT=Staging
-        - ASPNETCORE_URLS="https://+:443;http://+:80"
+        - ASPNETCORE_URLS=https://+;http://+
+        - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
+        - ASPNETCORE_Kestrel__Certificates__Default__Password=P@55w0rd
         - ASPNETCORE_HTTPS_PORT=1001
         - ASPNETCORE_HTTP_PORT=1000
