--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,16 +24,16 @@ services:
     volumes: 
         - ${HOME}/.aspnet/https/:/https/
     environment: 
-        - Deployment_Environment_Name=Staging 
-        - Deployment_LogLevel_Default=Information
-        - Deployment_Db_Server=main.database,1433
-        - Deployment_Db_Name=FreeParkingSystem.Database 
-        - Deployment_Db_User=sa 
-        - Deployment_Db_Password=S1mple@password 
-        - Deployment_PasswordOptions_MinimumCharacters=4
-        - ASPNETCORE_ENVIRONMENT=Staging
-        - ASPNETCORE_URLS=https://+;http://+
-        - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
-        - ASPNETCORE_Kestrel__Certificates__Default__Password=P@55w0rd
-        - ASPNETCORE_HTTPS_PORT=1001
-        - ASPNETCORE_HTTP_PORT=1000
+        Deployment_Environment_Name: "Staging" 
+        Deployment_LogLevel_Default: "Information"
+        Deployment_Db_Server: "main.database,1433"
+        Deployment_Db_Name: "FreeParkingSystem.Database"
+        Deployment_Db_User: "sa" 
+        Deployment_Db_Password: "S1mple@password" 
+        Deployment_PasswordOptions_MinimumCharacters: 4
+        ASPNETCORE_ENVIRONMENT: "Staging"
+        ASPNETCORE_URLS: "https://+;http://+"
+        ASPNETCORE_Kestrel__Certificates__Default__Path: "/https/aspnetapp.pfx"
+        ASPNETCORE_Kestrel__Certificates__Default__Password: "P@55w0rd"
+        ASPNETCORE_HTTPS_PORT: 1001
+        ASPNETCORE_HTTP_PORT: 1000
