--- a/.gitignore
+++ b/.gitignore
@@ -259,5 +259,6 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
-/tools/coverage/*
-/tools/coverage.opencover.xml
+/tools/cover
+/tools/coverage*
+
