--- a/src/Parking/FreeParkingSystem.Parking.Contract/FreeParkingSystem.Parking.Contract.csproj
+++ b/src/Parking/FreeParkingSystem.Parking.Contract/FreeParkingSystem.Parking.Contract.csproj
@@ -10,6 +10,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Update="Constants\FavoriteType.generated.cs">
+	    <DesignTime>True</DesignTime>
+	    <AutoGen>True</AutoGen>
+	    <DependentUpon>FavoriteType.tt</DependentUpon>
+	  </Compile>
 	  <Compile Update="Resources\Validation.Designer.cs">
 	    <DesignTime>True</DesignTime>
 	    <AutoGen>True</AutoGen>
@@ -22,6 +27,17 @@
 	    <Generator>PublicResXFileCodeGenerator</Generator>
 	    <LastGenOutput>Validation.Designer.cs</LastGenOutput>
 	  </EmbeddedResource>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="Constants\FavoriteType.tt">
+	    <LastGenOutput>FavoriteType.generated.cs</LastGenOutput>
+	    <Generator>TextTemplatingFileGenerator</Generator>
+	  </None>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
 	</ItemGroup>
 
 </Project>
