--- a/src/Account/FreeParkingSystem.Accounts.API/Properties/launchSettings.json
+++ b/src/Account/FreeParkingSystem.Accounts.API/Properties/launchSettings.json
@@ -18,12 +18,12 @@
       }
     },
     "FreeParkingSystem.Accounts": {
-      "commandName": "Docker",
+      "commandName": "Project",
       "launchUrl": "api/values",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5001"
+      "applicationUrl": "https://localhost:1001"
     },
     "Docker": {
       "commandName": "Docker",
