Change Client project

--- a/Tests/FreeParkingSystem.Common.Client.Tests/FreeParkingSystem.Client.Tests.csproj
+++ b/Tests/FreeParkingSystem.Common.Client.Tests/FreeParkingSystem.Client.Tests.csproj
@@ -21,7 +21,7 @@
 		</PackageReference>
 	</ItemGroup>
   <ItemGroup>
-	<ProjectReference Include="..\..\src\Common\FreeParkingSystem.Common.Client\FreeParkingSystem.Common.Client.csproj" />
+	<ProjectReference Include="..\..\src\Client\FreeParkingSystem.Client\FreeParkingSystem.Client.csproj" />
 	<ProjectReference Include="..\FreeParkingSystem.Testing\FreeParkingSystem.Testing.csproj" />
   </ItemGroup>
 
