--- a/src/Client/FreeParkingSystem.Client/FreeParkingSystem.Client.csproj
+++ b/src/Client/FreeParkingSystem.Client/FreeParkingSystem.Client.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Accounts\Models\" />
     <Folder Include="Http\Exceptions\" />
   </ItemGroup>
 
