--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,5 +1,7 @@
 version: '3'
 services:
+  rabbitmq:
+    image: "rabbitmq:3-management"
   accounts:
     environment: 
         Deployment_Environment_Name: "Development" 
