--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,6 +2,10 @@ version: '3'
 services:
   rabbitmq:
     image: "rabbitmq:3-management"
+    ports:
+        - "15672:15672"
+        - "5671:5671"
+        - "5672:5672"
   accounts:
     environment: 
         Deployment_Environment_Name: "Development" 
