--- a/src/Common/FreeParkingSystem.Common.API/FreeParkingSystem.Common.API.csproj
+++ b/src/Common/FreeParkingSystem.Common.API/FreeParkingSystem.Common.API.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FreeParkingSystem.Common.MessageBroker\FreeParkingSystem.Common.MessageBroker.csproj" />
     <ProjectReference Include="..\FreeParkingSystem.Common\FreeParkingSystem.Common.csproj" />
   </ItemGroup>
 
