--- a/src/Common/FreeParkingSystem.Common.MessageBroker/FreeParkingSystem.Common.MessageBroker.csproj
+++ b/src/Common/FreeParkingSystem.Common.MessageBroker/FreeParkingSystem.Common.MessageBroker.csproj
@@ -6,26 +6,11 @@
 
   <ItemGroup>
     <PackageReference Include="Polly" Version="7.1.1" />
-    <PackageReference Include="RabbitMQ.Client" Version="5.1.2" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FreeParkingSystem.Common.MessageBroker.Contract\FreeParkingSystem.Common.MessageBroker.Contract.csproj" />
     <ProjectReference Include="..\FreeParkingSystem.Common\FreeParkingSystem.Common.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Update="Resources\Errors.Designer.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Errors.resx</DependentUpon>
-    </Compile>
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Update="Resources\Errors.resx">
-      <Generator>PublicResXFileCodeGenerator</Generator>
-      <LastGenOutput>Errors.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
