Adding Account Messages

--- a/src/Account/FreeParkingSystem.Accounts.Contract/FreeParkingSystem.Accounts.Contract.csproj
+++ b/src/Account/FreeParkingSystem.Accounts.Contract/FreeParkingSystem.Accounts.Contract.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Common\FreeParkingSystem.Common.MessageBroker.Contract\FreeParkingSystem.Common.MessageBroker.Contract.csproj" />
     <ProjectReference Include="..\..\Common\FreeParkingSystem.Common\FreeParkingSystem.Common.csproj" />
   </ItemGroup>
 
