--- a/src/Account/FreeParkingSystem.Accounts/FreeParkingSystem.Accounts.csproj
+++ b/src/Account/FreeParkingSystem.Accounts/FreeParkingSystem.Accounts.csproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Common\FreeParkingSystem.Common.MessageBroker.Contract\FreeParkingSystem.Common.MessageBroker.Contract.csproj" />
+    <ProjectReference Include="..\..\Common\FreeParkingSystem.Common.MessageBroker\FreeParkingSystem.Common.MessageBroker.csproj" />
     <ProjectReference Include="..\..\Common\FreeParkingSystem.Common\FreeParkingSystem.Common.csproj" />
     <ProjectReference Include="..\FreeParkingSystem.Accounts.Contract\FreeParkingSystem.Accounts.Contract.csproj" />
     <ProjectReference Include="..\FreeParkingSystem.Accounts.Data\FreeParkingSystem.Accounts.Data.csproj" />
