--- a/src/Account/FreeParkingSystem.Accounts.API/appsettings.json
+++ b/src/Account/FreeParkingSystem.Accounts.API/appsettings.json
@@ -51,8 +51,8 @@
 	},
 	"jwt": {
 		"ExpiresAfter": "02:00:00",
-		"ValidAudience": "https://localhost", 
-		"ValidIssuer": "https://localhost" ,
+		"ValidAudience": "https://localhost:1001",
+		"ValidIssuer": "https://localhost:1001",
 		"Secret": [
 			136,
 			38,
@@ -87,5 +87,10 @@
 			234,
 			162
 		]
-	} 
+	},
+	"rabbitmq": {
+		"queueName": "ParkingDefault",
+		"hostName": "localhost",
+		"port": 5672
+	}
 }
