--- a/src/Account/FreeParkingSystem.Accounts.Contract/FreeParkingSystem.Accounts.Contract.csproj
+++ b/src/Account/FreeParkingSystem.Accounts.Contract/FreeParkingSystem.Accounts.Contract.csproj
@@ -14,6 +14,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Resources\Messages.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Messages.resx</DependentUpon>
+    </Compile>
     <Compile Update="Resources\Validations.Designer.cs">
       <DependentUpon>Validations.resx</DependentUpon>
       <DesignTime>True</DesignTime>
@@ -22,6 +27,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Resources\Messages.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Messages.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Update="Resources\Validations.resx">
       <LastGenOutput>Validations.Designer.cs</LastGenOutput>
       <Generator>PublicResXFileCodeGenerator</Generator>
