--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -21,3 +21,18 @@ services:
         ASPNETCORE_Kestrel__Certificates__Default__Password: "P@55w0rd"
         ASPNETCORE_HTTPS_PORT: 1001
         ASPNETCORE_HTTP_PORT: 1000
+  parking:
+    environment: 
+        Deployment_Environment_Name: "Development" 
+        Deployment_LogLevel_Default: "Information"
+        Deployment_Db_Server: "main.database,1433"
+        Deployment_Db_Name: "FreeParkingSystem.Database"
+        Deployment_Db_User: "sa" 
+        Deployment_Db_Password: "S1mple@password" 
+        Deployment_PasswordOptions_MinimumCharacters: 4
+        ASPNETCORE_ENVIRONMENT: "Development"
+        ASPNETCORE_URLS: "https://+;http://+"
+        ASPNETCORE_Kestrel__Certificates__Default__Path: "/https/aspnetapp.pfx"
+        ASPNETCORE_Kestrel__Certificates__Default__Password: "P@55w0rd"
+        ASPNETCORE_HTTPS_PORT: 2001
+        ASPNETCORE_HTTP_PORT: 2000
