--- a/src/Parking/FreeParkingSystem.Parking.API/FreeParkingSystem.Parking.API.csproj
+++ b/src/Parking/FreeParkingSystem.Parking.API/FreeParkingSystem.Parking.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -8,9 +8,27 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.7.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Properties\Run.ps1">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Common\FreeParkingSystem.Common.API\FreeParkingSystem.Common.API.csproj" />
+    <ProjectReference Include="..\..\Common\FreeParkingSystem.Common\FreeParkingSystem.Common.csproj" />
+    <ProjectReference Include="..\FreeParkingSystem.Parking.Contract\FreeParkingSystem.Parking.Contract.csproj" />
+    <ProjectReference Include="..\FreeParkingSystem.Parking\FreeParkingSystem.Parking.csproj" />
   </ItemGroup>
 
 </Project>
