--- a/src/Account/FreeParkingSystem.Accounts.API/appsettings.{environment_name}.json
+++ b/src/Account/FreeParkingSystem.Accounts.API/appsettings.{environment_name}.json
@@ -13,5 +13,10 @@
 		"MinimumCharacters": {{Deployment_PasswordOptions_MinimumCharacters}},
 		"MaximumCharacters": 16,
 		"Requirements": "Numbers, Capitals"
+	},
+
+	"rabbitmq": {
+		"hostName": "{{Deployment_RabbitMq_host}}",
+		"port": {{Deployment_RabbitMq_port}}
 	}
 }
