--- a/src/Parking/FreeParkingSystem.Parking.API/appsettings.{environment_name}.json
+++ b/src/Parking/FreeParkingSystem.Parking.API/appsettings.{environment_name}.json
@@ -8,5 +8,9 @@
 	},
 	"ConnectionStrings": {
 		"ParkingDbContext": "Server={{Deployment_Db_Server}};Database={{Deployment_Db_Name}};user id={{Deployment_Db_User}};password={{Deployment_Db_Password}}"
+	},
+	"rabbitmq": {
+		"hostName": "{{Deployment_RabbitMq_host}}",
+		"port": {{Deployment_RabbitMq_port}}
 	}
 }
