--- a/src/Common/FreeParkingSystem.Common.Data/FreeParkingSystem.Common.Data.csproj
+++ b/src/Common/FreeParkingSystem.Common.Data/FreeParkingSystem.Common.Data.csproj
@@ -7,6 +7,7 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.6" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="2.2.6" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Analyzers" Version="2.2.6" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.6" />
 	</ItemGroup>
 
 	<ItemGroup>
