Update Docker related files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,7 +72,9 @@ services:
         ASPNETCORE_Kestrel__Certificates__Default__Password: "P@55w0rd"
         ASPNETCORE_HTTPS_PORT: 2001
         ASPNETCORE_HTTP_PORT: 2000
-   orders:
+        Deployment_RabbitMq_host: "rabbitmq"
+        Deployment_RabbitMq_port: 5672
+  orders:
     depends_on:
         - main.database
         - rabbitmq
@@ -99,3 +101,5 @@ services:
         ASPNETCORE_Kestrel__Certificates__Default__Password: "P@55w0rd"
         ASPNETCORE_HTTPS_PORT: 3001
         ASPNETCORE_HTTP_PORT: 3000
+        Deployment_RabbitMq_host: "rabbitmq"
+        Deployment_RabbitMq_port: 5672
