--- a/src/Orders/FreeParkingSystem.Orders.API/appsettings.json
+++ b/src/Orders/FreeParkingSystem.Orders.API/appsettings.json
@@ -6,7 +6,7 @@
 	},
 	"AllowedHosts": "*",
 	"ConnectionStrings": {
-		"ParkingDbContext": "Server=localhost,3306;Database=FreeParkingSystem.Database;user id=sa;password=S1mple@password"
+		"OrdersDbContext": "Server=localhost,3306;Database=FreeParkingSystem.Database;user id=sa;password=S1mple@password"
 	},
 	"EncryptionOptions": {
 		"SecretKey": [
