--- a/src/Orders/FreeParkingSystem.Orders.API/appsettings.{environment_name}.json
+++ b/src/Orders/FreeParkingSystem.Orders.API/appsettings.{environment_name}.json
@@ -7,7 +7,7 @@
 		}
 	},
 	"ConnectionStrings": {
-		"ParkingDbContext": "Server={{Deployment_Db_Server}};Database={{Deployment_Db_Name}};user id={{Deployment_Db_User}};password={{Deployment_Db_Password}}"
+		"OrdersDbContext": "Server={{Deployment_Db_Server}};Database={{Deployment_Db_Name}};user id={{Deployment_Db_User}};password={{Deployment_Db_Password}}"
 	},
 	"rabbitmq": {
 		"hostName": "{{Deployment_RabbitMq_host}}",
