Move Parking Models around to help with the Order Api

--- a/src/Common/FreeParkingSystem.Common.Data/FreeParkingSystem.Common.Data.csproj
+++ b/src/Common/FreeParkingSystem.Common.Data/FreeParkingSystem.Common.Data.csproj
@@ -12,6 +12,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\..\Common\FreeParkingSystem.Common\FreeParkingSystem.Common.csproj" />
+		<ProjectReference Include="..\FreeParkingSystem.Common.Data.Models\FreeParkingSystem.Common.Data.Models.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
