--- a/src/Parking/FreeParkingSystem.Parking.Data/FreeParkingSystem.Parking.Data.csproj
+++ b/src/Parking/FreeParkingSystem.Parking.Data/FreeParkingSystem.Parking.Data.csproj
@@ -8,6 +8,7 @@
 		<ProjectReference Include="..\..\Common\FreeParkingSystem.Common.Data\FreeParkingSystem.Common.Data.csproj" />
 		<ProjectReference Include="..\..\Common\FreeParkingSystem.Common\FreeParkingSystem.Common.csproj" />
 		<ProjectReference Include="..\FreeParkingSystem.Parking.Contract\FreeParkingSystem.Parking.Contract.csproj" />
+		<ProjectReference Include="..\FreeParkingSystem.Parking.Data.DatabaseModels\FreeParkingSystem.Parking.Data.DatabaseModels.csproj" />
 	</ItemGroup>
 
 </Project>
